# FSGetraenkeSystemV2

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
nanposweb/: __init__.py  account.py  auth.py  forms.py  helpers.py  main.py  metrics.py  nfc_api.py  utils.py
nanposweb/admin/: forms.py  products.py  users.py
nanposweb/admin/templates/users/: index.html  revenues.html
nanposweb/db/: helpers.py  models.py
nanposweb/modules/example/: __init__.py
nanposweb/modules/example/templates/: example.html
nanposweb/static/: cardReader.js  custom.css
nanposweb/templates/: bank_account.html  base.html  index.html  login.html
nanposweb/templates/account/: change_card.html  change_pin.html  index.html
nanposweb/templates/utils/: qrcode.html
pi_client/: README.md  api_client.py  app.py  config.py.example  nfc_reader.py  requirements.txt
pi_client/templates/: admin.html  base.html  idle.html  result.html  user.html
