[tool.poetry]
name = "nanposweb"
version = "0.21.0"
description = ""
authors = ["Dominik Rimpf <dev@drimpf.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.5"
Flask = "^2.2.3"
Flask-SQLAlchemy = "^3.0.3"
Flask-Login = "^0.6.2"
Flask-WTF = "^1.1.1"
Flask-Principal = "^0.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
