[project]
name = "nanposweb"
version = "0.22.1"
description = ""
authors = [
    {name = "Dominik Rimpf", email = "dev@drimpf.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "psycopg2~=2.9.10",
  "flask~=3.1.0",
  "flask-sqlalchemy~=3.1.1",
  "flask-login~=0.6.3",
  "flask-wtf~=1.2.2",
  "flask-principal~=0.4.0"
]

[tool.poetry.group.lint.dependencies]
ruff = "^0.8.6"
mypy = "^1.14.1"
bandit = {extras = ["toml"], version = "^1.8.0"}
types-wtforms = "^3.2.1.20241221"

[tool.ruff]
# Ignore build and venv directory
exclude = ["build", ".venv"]

# 80 chars aren't enough in 21 century
line-length = 128
indent-width = 2

show-fixes = true
fix = false

[tool.ruff.lint]
select = ["F", "E", "W", "C90", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "G", "PIE", "T20", "PYI", "PT", "Q", "RET", "SIM", "PTH", "RUF"]
# S101: flake8-bandit forbids asserts
# UP007: ignore modern typehints until https://github.com/tiangolo/typer/issues/533 is fixed
ignore = ["S101", "UP007"]

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"

[tool.ruff.lint.flake8-annotations]
# Ignore opinionated flake8-annotation rule
suppress-none-returning = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
# 5. Use single quotes for non-triple-quoted strings.
quote-style = "single"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "flask_login",
    "flask_principal",
    "flask_wtf"
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
